webpack resolver, classnames, left menu, orgnize z-index, active toggle and transform styles.

--- a/src/styles/navmenu.css
+++ b/src/styles/navmenu.css
@@ -21,7 +21,7 @@
   left: 40px;
   top:40px;
   width: 30px;
-  z-index: 1000;
+  z-index: 2000;
   -webkit-transition: all .4s ease-in-out;
      -moz-transition: all .4s ease-in-out;
     -ms-transition: all .4s ease-in-out;
